--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
     <script>document.write('<base href="' + document.location + '" />');</script>
     <link rel="stylesheet" href="style.css" />
     <script data-require="angular.js@1.5.8" src="https://code.angularjs.org/1.4.9/angular.js" data-semver="1.4.9"></script>
+    <script data-require="rxjs@*" data-semver="4.1.0" src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/4.1.0/rx.all.js"></script>
+    <script data-require="rx.angular.js@0.0.14" data-semver="0.0.14" src="https://cdn.rawgit.com/Reactive-Extensions/rx.angular.js/v1.1.3/dist/rx.angular.js"></script>
     <script src="app.js"></script>
   </head>
   <body ng-controller="MainCtrl">
